# django-init

./: .env.example  LICENSE  README.md  pyproject.toml  pytest.ini
apps/api/: exception_handlers.py  urls.py
apps/common/: exceptions.py  models.py  services.py
apps/users/: admin.py  models.py  selectors.py  services.py  tests.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: factories.py
apps/utils/: faker.py  text.py
apps/utils/tests/: test_text.py
config/: env.py  urls.py
config/django/: base.py  production.py  test.py
config/settings/: celery.py  cors.py  email_sending.py  files_and_storages.py  sentry.py
