# ======================================================================================
# POETRY 
# ======================================================================================
[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["John Doe <john.doe@example.com>"]
readme = "README.md"
packages = [{ include = "config" }, { include = "apps" }]


[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-environ = "^0.11.2"
django-cors-headers = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.9.0"


[tool.poetry.scripts]
# add scripts here

# ======================================================================================
# PYTEST 
# ======================================================================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.django.test"
addopts = ["--import-mode=importlib"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]


# ======================================================================================
# BUILD 
# ======================================================================================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# ======================================================================================
# RUFF 
# ======================================================================================
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  "migrations",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]
